align favourites button correctly

--- a/property-front/src/app/adverts/advert-detail/advert-detail.component.scss
+++ b/property-front/src/app/adverts/advert-detail/advert-detail.component.scss
@@ -91,3 +91,13 @@ img {
     }
   }
 }
+
+button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  mat-icon {
+    padding-left: 4px;
+  }
+}
